crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__moustache.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Built with {{ title }} as {{ press.template }} but not `{{ code }}`.
