crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__notes-and-abbr.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
The HTML spec[^1] is maintained by the W3C. <!-- check the year -->

[^1]: The living standard.

*[HTML]: HyperText Markup Language
*[W3C]: World Wide Web Consortium
