crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__progressbar-escaped.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Write \[=45% \"Review"] for a bar, \[=100%] for a full one; [=x%] is text.
