crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__progressbar.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
[=25% "Research"]
[=45% "Review"]{.thin}
