crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__reference-bare.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
See @sec:intro and [^ein05], not me@example.com.
