crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__reference-doi.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Cite @doi:10.1002/andp.19053221004 and @doi:10.1002/andp.19053221004.
